removed related to  e-library

--- a/1HCI.HTML
+++ b/1HCI.HTML
@@ -21,7 +21,7 @@
                         <path d="M12 26C12 22 16 20 20 20C24 20 28 22 28 26" stroke="currentColor" stroke-width="2"/>
                     </svg>
                 </div>
-                <span class="brand-text">University of Excellence</span>
+                <span class="brand-text">Amore Academy</span>
             </div>
             
             <div class="nav-toggle" id="navToggle">
@@ -93,17 +93,6 @@
                 </li>
 
                 <li class="nav-item dropdown">
-                    <a href="#elibrary" class="nav-link">eLibrary <span class="dropdown-arrow">▾</span></a>
-                    <div class="dropdown-menu">
-                        <a href="#digital-books">Digital Books</a>
-                        <a href="#journals">Journals and Articles</a>
-                        <a href="#research">Research Papers</a>
-                        <a href="#modules">School Modules</a>
-                        <a href="#guidelines">eLibrary Guidelines</a>
-                    </div>
-                </li>
-
-                <li class="nav-item dropdown">
                     <a href="#admissions" class="nav-link">Admissions <span class="dropdown-arrow">▾</span></a>
                     <div class="dropdown-menu">
                         <div class="dropdown-section">
@@ -151,8 +140,8 @@
         <div class="hero-content">
             <div class="hero-badge">EST. 1965</div>
             <h1 class="hero-title">
-                <span class="title-line">University of</span>
-                <span class="title-line emphasis">BIRINGAN</span>
+                <span class="title-line">Amore</span>
+                <span class="title-line emphasis">Academy</span>
             </h1>
             <p class="hero-tagline">Shaping Minds, Building the Future</p>
             
@@ -162,7 +151,7 @@
         </div>
 
         <div class="hero-scroll">
-            <span>Scroll to explore</span>
+            <span></span>
             <div class="scroll-indicator"></div>
         </div>
     </section>
@@ -204,16 +193,15 @@
                     <p>Access your account</p>
                 </a>
 
-                <a href="#elibrary" class="quick-link-card">
+                <a href="#academics" class="quick-link-card">
                     <div class="card-icon">
                         <svg width="32" height="32" viewBox="0 0 32 32" fill="none">
-                            <path d="M8 6H12V26H8V6Z" stroke="currentColor" stroke-width="2"/>
-                            <path d="M14 6H18V26H14V6Z" stroke="currentColor" stroke-width="2"/>
-                            <path d="M20 6H24V26H20V6Z" stroke="currentColor" stroke-width="2"/>
+                            <rect x="8" y="10" width="16" height="12" rx="1" stroke="currentColor" stroke-width="2"/>
+                            <path d="M16 6L24 10L16 14L8 10L16 6Z" stroke="currentColor" stroke-width="2" stroke-linejoin="round"/>
                         </svg>
                     </div>
-                    <h3>eLibrary</h3>
-                    <p>Browse digital resources</p>
+                    <h3>Programs</h3>
+                    <p>Explore our academic offerings</p>
                 </a>
             </div>
         </div>
@@ -333,6 +321,17 @@
                         <a href="#" class="text-link">Read more →</a>
                     </div>
                 </article>
+                <article class="news-card">
+                    <div class="news-content">
+                        <div class="news-meta">
+                            <span class="news-date">February 5, 2026</span>
+                            <span class="news-category">Announcements</span>
+                        </div>
+                        <h3>Enrollment Period Extended</h3>
+                        <p>We're extending our enrollment deadline to accommodate more aspiring students.</p>
+                        <a href="#" class="text-link">Read more →</a>
+                    </div>
+                </article>
             </div>
         </div>
     </section>
@@ -374,7 +373,7 @@
                         <li><a href="#about">About Us</a></li>
                         <li><a href="#academics">Academics</a></li>
                         <li><a href="#admissions">Admissions</a></li>
-                        <li><a href="#elibrary">eLibrary</a></li>
+                        <li><a href="#alumni">Alumni</a></li>
                     </ul>
                 </div>
 
@@ -384,7 +383,7 @@
                         <li><a href="#calendar">Academic Calendar</a></li>
                         <li><a href="#">Student Portal</a></li>
                         <li><a href="#news">News & Events</a></li>
-                        <li><a href="#alumni">Alumni</a></li>
+                        <li><a href="#library">Library</a></li>
                     </ul>
                 </div>
 
