--- a/1HCI.HTML
+++ b/1HCI.HTML
@@ -33,13 +33,13 @@
 
                 <!-- ABOUT — removed: Administration and Offices -->
                 <li class="nav-item dropdown">
-                    <a href="#about" class="nav-link">About <span class="dropdown-arrow">▾</span></a>
+                    <a href="about.html" class="nav-link">About <span class="dropdown-arrow">▾</span></a>
                     <div class="dropdown-menu">
                         <div class="dropdown-section">
                             <h4>General Information</h4>
-                            <a href="#history">School History</a>
-                            <a href="#mission">Mission and Vision</a>
-                            <a href="#values">Core Values</a>
+                            <a href="about.html">School History</a>
+                            <a href="about.html">Mission and Vision</a>
+                            <a href="about.html">Core Values</a>
                         </div>
                     </div>
                 </li>
