--- a/1HCI.HTML
+++ b/1HCI.HTML
@@ -47,12 +47,12 @@
 
                 <!-- ACADEMICS — removed: Academic Resources / Academic Calendar -->
                 <li class="nav-item dropdown">
-                    <a href="#academics" class="nav-link">Academics <span class="dropdown-arrow">▾</span></a>
+                    <a href="academics.html" class="nav-link">Academics <span class="dropdown-arrow">▾</span></a>
                     <div class="dropdown-menu">
                         <div class="dropdown-section">
                             <h4>Programs Offered</h4>
-                            <a href="#junior-high">Junior High School</a>
-                            <a href="#senior-high">Senior High School</a>
+                            <a href="academics.html">Junior High School</a>
+                            <a href="academics.html">Senior High School</a>
                         </div>
                     </div>
                 </li>
