--- a/academics.html
+++ b/academics.html
@@ -591,48 +591,64 @@
         </p>
         <div class="academics-faculty-grid">
           <div class="academics-faculty-card">
-            <div class="academics-faculty-avatar">MA</div>
-            <h3>Ms. Maria A.</h3>
+            <div class="academics-faculty-avatar"><img src="jansen1.png" width="100px" alt=""></div>
+            <h3>Mr. Jansen S.</h3>
             <div class="academics-faculty-role">Department Head</div>
             <p class="academics-faculty-dept">
               Mathematics &amp; Sciences — JHS
             </p>
           </div>
           <div class="academics-faculty-card">
-            <div class="academics-faculty-avatar">JR</div>
-            <h3>Mr. Jose R.</h3>
+            <div class="academics-faculty-avatar"><img src="Ignacio.png" width="100px" alt=""></div>
+            <h3>Ms. Ella I.</h3>
             <div class="academics-faculty-role">Senior Teacher</div>
             <p class="academics-faculty-dept">
               English Language Arts — JHS &amp; SHS
             </p>
           </div>
           <div class="academics-faculty-card">
-            <div class="academics-faculty-avatar">CP</div>
-            <h3>Ms. Clara P.</h3>
+            <div class="academics-faculty-avatar"><img src="kulot.png" width="100px" alt=""></div>
+            <h3>Ms. Shiella F.</h3>
             <div class="academics-faculty-role">STEM Coordinator</div>
             <p class="academics-faculty-dept">
               Science, Technology, Engineering
             </p>
           </div>
           <div class="academics-faculty-card">
-            <div class="academics-faculty-avatar">BL</div>
-            <h3>Mr. Benjamin L.</h3>
+            <div class="academics-faculty-avatar"><img src="Amore_Academy_Logo.png" width="100px" alt=""></div>
+            <h3>Mr. Ken D.</h3>
             <div class="academics-faculty-role">Track Adviser</div>
             <p class="academics-faculty-dept">
               Technical-Vocational-Livelihood
             </p>
           </div>
           <div class="academics-faculty-card">
-            <div class="academics-faculty-avatar">SG</div>
-            <h3>Ms. Sofia G.</h3>
+            <div class="academics-faculty-avatar"><img src="raymundo.png" width="100px" alt=""></div>
+            <h3>Ms. Tiffany R.</h3>
             <div class="academics-faculty-role">Senior Teacher</div>
             <p class="academics-faculty-dept">
               Araling Panlipunan &amp; Values Ed.
             </p>
           </div>
           <div class="academics-faculty-card">
-            <div class="academics-faculty-avatar">RM</div>
-            <h3>Mr. Ramon M.</h3>
+            <div class="academics-faculty-avatar"><img src="Amore_Academy_Logo.png" width="100px" alt=""></div>
+            <h3>Mr. Carl M.</h3>
+            <div class="academics-faculty-role">Arts &amp; Design Lead</div>
+            <p class="academics-faculty-dept">
+              Visual Arts &amp; Performing Arts
+            </p>
+          </div>
+          <div class="academics-faculty-card">
+            <div class="academics-faculty-avatar"><img src="velasco.png" width="100px" alt=""></div>
+            <h3>Ms. Erica V.</h3>
+            <div class="academics-faculty-role">Arts &amp; Design Lead</div>
+            <p class="academics-faculty-dept">
+              Visual Arts &amp; Performing Arts
+            </p>
+          </div>
+          <div class="academics-faculty-card">
+            <div class="academics-faculty-avatar"><img src="Amore_Academy_Logo.png" width="100px" alt=""></div>
+            <h3>Mr. Anthony B.</h3>
             <div class="academics-faculty-role">Arts &amp; Design Lead</div>
             <p class="academics-faculty-dept">
               Visual Arts &amp; Performing Arts
