--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
     <section class="about-page-hero">
       <div class="about-page-hero-bg">
         <img
-          src="hci bg.jpg"
+          src="bg.png"
           alt="Campus"
           class="about-page-hero-img"
           loading="eager"
