--- a/academics.html
+++ b/academics.html
@@ -99,7 +99,7 @@
     <section class="academics-hero">
       <div class="academics-hero-bg">
         <img
-          src="hci bg.jpg"
+          src="bg.png"
           alt="Campus"
           class="academics-hero-img"
           loading="eager"
@@ -607,7 +607,7 @@
             </p>
           </div>
           <div class="academics-faculty-card">
-            <div class="academics-faculty-avatar"><img src="kulot.png" width="100px" alt=""></div>
+            <div class="academics-faculty-avatar"><img src="shiella.png" width="100px" alt=""></div>
             <h3>Ms. Shiella F.</h3>
             <div class="academics-faculty-role">STEM Coordinator</div>
             <p class="academics-faculty-dept">
@@ -615,7 +615,7 @@
             </p>
           </div>
           <div class="academics-faculty-card">
-            <div class="academics-faculty-avatar"><img src="Amore_Academy_Logo.png" width="100px" alt=""></div>
+            <div class="academics-faculty-avatar"><img src="drilon.png" width="100px" alt=""></div>
             <h3>Mr. Ken D.</h3>
             <div class="academics-faculty-role">Track Adviser</div>
             <p class="academics-faculty-dept">
@@ -631,7 +631,7 @@
             </p>
           </div>
           <div class="academics-faculty-card">
-            <div class="academics-faculty-avatar"><img src="Amore_Academy_Logo.png" width="100px" alt=""></div>
+            <div class="academics-faculty-avatar"><img src="makabenta.png" width="100px" alt=""></div>
             <h3>Mr. Carl M.</h3>
             <div class="academics-faculty-role">Arts &amp; Design Lead</div>
             <p class="academics-faculty-dept">
@@ -643,11 +643,11 @@
             <h3>Ms. Erica V.</h3>
             <div class="academics-faculty-role">Arts &amp; Design Lead</div>
             <p class="academics-faculty-dept">
-              Visual Arts &amp; Performing Arts
+              Physical Education — JHS &amp; SHS 
             </p>
           </div>
           <div class="academics-faculty-card">
-            <div class="academics-faculty-avatar"><img src="Amore_Academy_Logo.png" width="100px" alt=""></div>
+            <div class="academics-faculty-avatar"><img src="babac.png" width="100px" alt=""></div>
             <h3>Mr. Anthony B.</h3>
             <div class="academics-faculty-role">Arts &amp; Design Lead</div>
             <p class="academics-faculty-dept">
