--- a/admissions.html
+++ b/admissions.html
@@ -95,7 +95,7 @@
     <section class="adm-hero">
       <div class="adm-hero-bg">
         <img
-          src="hci bg.jpg"
+          src="bg.png"
           alt="Campus"
           class="adm-hero-img"
           loading="eager"
