--- a/news.html
+++ b/news.html
@@ -76,7 +76,7 @@
 
     <section class="news-page-hero">
         <div class="news-page-hero-bg">
-            <img src="hci bg.jpg" alt="Campus" class="news-page-hero-img" loading="eager">
+            <img src="bg.png" alt="Campus" class="news-page-hero-img" loading="eager">
             <div class="news-page-hero-overlay"></div>
         </div>
         <div class="news-page-hero-content">
