--- a/1HCI.HTML
+++ b/1HCI.HTML
@@ -92,6 +92,9 @@
               </div>
             </div>
           </li>
+          <li class="nav-item">
+            <a href="schedule.php" class="nav-link">Schedule</a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -469,8 +472,7 @@
               <li>Phone: (02) 8123-4567</li>
               <li>
                 Email:
-                <a href="mailto:info@amoreacademy.edu.ph"
-                  >info@amoreacademy.edu.ph</a
+                <a href="/cdn-cgi/l/email-protection#e0898e868fa0818d8f928581838184858d99ce858495ce9088"><span class="__cf_email__" data-cfemail="7f161119103f1e12100d1a1e1c1e1b1a1206511a1b0a510f17">[email&#160;protected]</span></a
                 >
               </li>
             </ul>
@@ -480,12 +482,4 @@
           <p>&copy; 2026 Amore Academy. All rights reserved.</p>
           <div class="footer-links">
             <a href="#">Privacy Policy</a><a href="#">Terms of Use</a
-            ><a href="#">Accessibility</a>
-          </div>
-        </div>
-      </div>
-    </footer>
-
-    <script src="1HCI.JS"></script>
-  </body>
-</html>
+            ><a href="#">Accessibility</a
